# spotify-playlist-mirror

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  test_runner_summary.py  test_web.py
.github/workflows/: ci.yml
docs/: adding-a-provider.md
frontend/: index.html
frontend/e2e/: verify.cjs
frontend/src/: api.ts  types.ts
frontend/src/hooks/: useDarkMode.ts  useEventStream.ts  useSidebarCollapsed.ts
frontend/src/lib/: constants.ts  syncSummary.ts
frontend/src/pages/: Sync.tsx
omni_sync/engine/: archive.py  config.py  dedupe.py  downloads.py  jellyfin.py  runner.py  spotify.py
omni_sync/engine/targets/: __init__.py  base.py  spotify_target.py  ytmusic.py
omni_sync/services/: playlists.py  sync_service.py  syncs.py
omni_sync/web/: __init__.py
songmirror/engine/: config.py  dedupe.py  matching.py  runner.py  spotify.py
songmirror/services/: settings.py  sync_service.py  transfers.py
songmirror/web/: __init__.py
spotify_mirror/: config.py  downloads.py  runner.py
spotify_mirror/engine/: runner.py
spotify_mirror/services/: playlists.py  settings.py  sync_service.py  transfers.py
spotify_mirror/targets/: apple.py  base.py  ytmusic.py
spotify_mirror/web/: __init__.py
tests/: test_connectors.py  test_dedupe.py  test_downloads.py  test_events.py  test_logs_sink.py  test_matching.py  test_playlists.py  test_reconcile.py  test_runner_summary.py  test_settings.py  test_sync_schedule.py  test_sync_service.py  test_targets_accessors.py  test_transfers.py  test_web.py
(+33 files in other folders)
