[project]
name = "omni-playlist-sync"
version = "0.1.0"
description = "Bidirectional N-way playlist sync across Spotify, Apple Music, and YouTube Music, with optional local audio copies"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anyascii>=0.3,<1",
    "python-dotenv>=1.2.2",
    "rapidfuzz>=3.9,<4",
    "requests>=2.32.5",
    "spotipy>=2.26.0",
    "ytmusicapi>=1.12,<2",
]

[project.optional-dependencies]
download = [
    "spotdl>=4.5,<5",
]
